# Riru-IFWEnhance

./: .gitignore  README.md  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
.github/workflows/: publish-update-json.yaml
buildSrc/src/main/java/: GenerateMagiskTask.kt  MergeMagiskTask.kt
hideapi/: build.gradle  build.gradle.kts
hideapi/src/main/java/android/app/: ActivityManagerInternal.java
hideapi/src/main/java/android/content/pm/: IPackageManager.java  ParceledListSlice.java
hideapi/src/main/java/android/os/: SystemProperties.java
hideapi/src/main/java/com/android/server/: LocalServices.java
hideapi/src/main/java/com/android/server/firewall/: IntentFirewall.java
module/: build.gradle  build.gradle.kts  proguard-rules.pro
module/src/main/cpp/: CMakeLists.txt  inject.h  log.h  main.c
module/src/main/java/android/content/pm/: ParceledListSlice.java
module/src/main/java/android/os/: IServiceManager.java  ServiceManagerNative.java
module/src/main/java/com/github/kr328/ifw/: Constants.java  Firewall.java  Injector.java  IntentFirewall.java  Main.java  ObjectResolver.java  PackageManagerProxy.java  PackageProxy.java  Proxy.java  ProxyFactory.java  Reflections.java  ServiceProxy.java
module/src/main/java/com/github/kr328/ifw/proxy/: LocalInterfaceProxy.java  OriginalExporter.java  ProxyBinder.java  ProxyBinderFactory.java  ServiceManagerProxy.java  StackUtils.java  TransactCodeExporter.java
module/src/main/raw/: customize.sh
module/src/main/raw/magisk/: install.sh  module.prop  uninstall.sh
